--- a/style.scss
+++ b/style.scss
@@ -33,10 +33,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
-  font-weight: bold;
+  font-weight: normal;
 
-  line-height: 1.7;
-  margin: 1em 0 15px;
+  line-height: 1.0;
+  margin: 1em 0 5px;
   padding: 0;
 
   @include mobile {
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 20px;
   a {
     color: inherit;
   }
@@ -242,7 +242,7 @@ nav {
 //
 
 .posts > .post {
-  padding-bottom: 2em;
+  height: 2em;
   border-bottom: 1px solid $lightGray;
 }
 
