--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} </title>
 
     {% include meta.html %}
 
@@ -10,7 +10,7 @@
     <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css"/>
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}"
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }}"
           href="{{ site.baseurl }}/feed.xml"/>
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
@@ -18,23 +18,19 @@
 
 <body>
 <div class="wrapper">
-    <div class="wrapper-header">
-        <header class="header">
-            <!--<a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>-->
-            <div class="site-info">
-                <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            </div>
-        </header>
-    </div>
+    <header class="wrapper-header">
+        <div class="category-container">
+            <span class="category">Home</span>
+        </div>
+        <a href="{{ site.baseurl }}/" class="title">{{ site.name }}</a></a>
+    </header>
 
     <div class="wrapper-posts">
         {{ content }}
     </div>
 
     <div class="wrapper-footer">
-        <footer class="footer">
-            {% include svg-icons.html %}
-        </footer>
+                Stay Hungry. Stay Foolish.
     </div>
 </div>
 
