--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,16 @@
 layout: default
 ---
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+<article class="page-post">
+  <div class="page-post-title">{{ page.title }}</div>
+    <div class="page-post-title-border"></div>
 
-  <div class="entry">
+  <div class="page-entry">
     {{ content }}
   </div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+  <div class="page-date">
+    {{page.date | date:"%Y-%m-%d %H:%M"}}
   </div>
 
   {% include disqus.html %}
