--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,7 +19,7 @@ $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 $Philosopher: Philosopher;
-
+$NSimSun:NSimSun;
 // Mobile breakpoints
 @mixin mobile {
   @media screen and (max-width: 640px) {
