--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 <div class="wrapper">
     <header class="wrapper-header">
         <div class="category-container">
-            <span class="category">Home</span>
+            <span class="category">主页</span>
         </div>
         <a href="{{ site.baseurl }}/" class="title">{{ site.name }}</a></a>
     </header>
