--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -11,7 +11,37 @@
 }
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  padding: .4em;
+  padding-top: .2em;
+  padding-bottom: .1em;
+  background: lighten($secondary-color, 32%);
+  border: 1px solid lighten($secondary-color, 25%);
+  border-radius: $border-radius;
+  font-family: Source Code Pro, Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+  font-size: 0.9em;
+  vertical-align: middle;
+  word-wrap: break-word;
+}
+
+pre {
+  margin-bottom: 1.3em;
+  padding: 1em 2.5%;
+  background: lighten($secondary-color, 32%);
+  border: 1px solid lighten($secondary-color, 25%);
+  border-radius: $border-radius;
+  font-family: Source Code Pro, Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+  font-size: .9em;
+  font-weight: normal;
+  line-height: 1.3em;
+  overflow:scroll;
+
+  code {
+    padding: 0;
+    background: none;
+    border: none;
+    word-wrap: normal;
+  }
+
 }
 
 .highlight .c { color: #586E75 } /* Comment */
