--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
-$font-family: "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", "Lucida Grande", "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+$font-family: "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 $post-height: 50px;
 
 html {
